# P5-SMAK

./: .gitignore  CMakeLists.txt  README.md  geteval.js  geteval.ts  index.html  index.js  package-lock.json  package.json  test.json
ArduinoChess/: P5_piecemove_statemachine.drawio
ArduinoChess/ArduinoChess/: ArduinoChess.sln  ArduinoChess.vcxproj  CMakeLists.txt  main.cpp  pch.h  test.cpp
ChessRest/: .gitignore  CMakeLists.txt
ChessRest/api_endpoint/: CMakeLists.txt
ChessRest/api_endpoint/include/: EndpointComponents.hpp  smakcontroller.hpp
ChessRest/api_endpoint/src/: main.cpp  smakcontroller.cpp
ChessRest/chessclientlib/: CMakeLists.txt
ChessRest/chessclientlib/include/: chesslib.hpp  clientlib.hpp  models.hpp
ChessRest/chessclientlib/include/dtos/: evalDTO.hpp  gameDTO.hpp  moveDTO.hpp
ChessRest/chessclientlib/src/: chesslib.cpp  clientlib.cpp
ChessRest/test/: CMakeLists.txt  GetFen.cpp  MoveDTO-Convert.cpp  SerDe-GameDTO.cpp  SerDe-MoveDTO.cpp
ChessRest/uci_ipc/: CMakeLists.txt  Doxyfile
ChessRest/uci_ipc/include/: ipc.hpp  uci_commands.hpp
ChessRest/uci_ipc/src/: eval.cpp  evaluation.cpp  ipc.cpp  main.cpp  uci_commands.cpp
Smak/: pom.xml
Smak/src/main/java/dk/aau/chrinigin/Smak/model/: Boardstate.java  BoardstateId.java  Game.java  ResultEnum.java
Smak/src/main/java/dk/aau/chrinigin/Smak/service/: BoardstateService.java
Smak/src/main/java/dk/aau/chrinigin/Smak/web/: BoardstateController.java  GameController.java
Smak/src/main/resources/: application.properties
api_endpoint/include/: smakcontroller.hpp
api_endpoint/src/: smakcontroller.cpp
arduino/: UPDATEARDU.ino  tictactoe  tictactoe.ino
arduino/ArduSerialRepeaterExample/: ArduSerialRepeaterExample.ino
arduino/ESP8266SerialToArduRepeater/: ESP8266SerialToArduRepeater.ino
arduino/SM4K-Arduino/: SM4K-Arduino.ino
arduino/SM4K-ESP8266/: ChessFSM.h  ChessNetworking.h  ChessNetworking.ino  SM4K-ESP8266.ino  pch.h  pch.ino
arduino/TTT-Arduino/: TTT-Arduino.ino
arduino/TTT-ESP8266/: TTT-ESP8266.ino
arduino/TTTcmdInterface/: TTTcmdInterface.ino
arduino/TTTwithDebounce/: TTTwithDebounce.ino
chess-cloud/chess/: pom.xml
chess-cloud/chess/src/main/java/dk/aau/group1/p5/chess/model/: Game.java  GameStateEnum.java  Games.java  Move.java  Moves.java  PiecesEnum.java
chess-cloud/chess/src/main/java/dk/aau/group1/p5/chess/repository/: GamesRepository.java  MoveRepository.java  MovesRepository.java
chess-cloud/chess/src/main/java/dk/aau/group1/p5/chess/service/: GameService.java  GamesService.java  MoveService.java  MovesService.java
chess-cloud/chess/src/main/java/dk/aau/group1/p5/chess/web/: GameController.java  GamesController.java  MoveController.java  MovesController.java
chess-cloud/chess/src/main/resources/: application.properties
chessclientlib/: CMakeLists.txt
chessclientlib/include/: clientlib.hpp  models.hpp
chessclientlib/include/dtos/: gameDTO.hpp
cloud/ChessRest/: .gitignore
cloud/ChessRest/api_endpoint/include/: smakcontroller.hpp
cloud/ChessRest/api_endpoint/src/: smakcontroller.cpp
cloud/ChessRest/chessclientlib/include/: chesslib.hpp
cloud/ChessRest/chessclientlib/include/dtos/: evalDTO.hpp
cloud/ChessRest/chessclientlib/src/: chesslib.cpp
cloud/ChessRest/uci_ipc/include/: ipc.hpp
cloud/ChessRest/uci_ipc/src/: eval.cpp  ipc.cpp
cloud/ansible/: .password  README.md  ansible.cfg  invTest.ini  inventory.ini  setupServer.yml  testserver.ini
cloud/ansible/playbooks/: ansibleVault  authorized_keys  deploySMAK.yml  deployTTT.yml  install.yml  packages.txt  reverseproxySetup.yml  smakDBsetup.yml  tictactoeVault  tttDBsetup.yml  useradd-Ansible.yml  webConfig.yml
cloud/ansible/playbooks/files/: npm-data.enc
cloud/ansible/playbooks/templates/: apache-default-7080.conf.j2  pgndpoint.service  smakdbendpoint.service  tttendpoint.service
cloud/ansible/scripts/: pack_npm_data.sh
cloud/chess-cloud/chess/src/main/java/dk/aau/group1/p5/chess/model/: Move.java  MoveId.java
cloud/chess-cloud/chess/src/main/java/dk/aau/group1/p5/chess/service/: MoveService.java
cloud/chess-cloud/chess/src/main/java/dk/aau/group1/p5/chess/web/: GameController.java
cloud/jpadb/Smak/: pom.xml
cloud/jpadb/Smak/src/main/java/dk/aau/chrinigin/Smak/: SmakApplication.java
cloud/jpadb/Smak/src/main/java/dk/aau/chrinigin/Smak/model/: Boardstate.java  BoardstateId.java  Game.java  GameState.java  Move.java  MoveId.java  PieceType.java  ResultEnum.java
cloud/jpadb/Smak/src/main/java/dk/aau/chrinigin/Smak/repository/: BoardstateRepository.java  GameRepository.java  MoveRepository.java
cloud/jpadb/Smak/src/main/java/dk/aau/chrinigin/Smak/service/: BoardstateService.java  GameService.java  MoveService.java
cloud/jpadb/Smak/src/main/java/dk/aau/chrinigin/Smak/web/: BoardstateController.java  GameController.java  GameNotFoundAdvice.java  GameNotFoundException.java  MoveController.java
cloud/jpadb/Smak/src/main/resources/: application.properties
cloud/jpadb/Smak/src/main/resources/static/: viewer.html
cloud/jpadb/Smak/src/test/java/dk/aau/chrinigin/Smak/: SmakApplicationTests.java
cloud/php/: index.php
cloud/webinterface/: geteval.ts  index.html
test/: CMakeLists.txt  MoveDTO-Convert.cpp  SerDe-MoveDTO.cpp
